--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         .appfront {
             z-index: 1001;
         }
+        .btn-full-width {
+            width:100%;
+        }
+        a {
+            border-radius: 0 !important;
+        }
+        .force-square {
+            border-radius: 0 !important;
+        }
     </style>
 </head>
 
@@ -39,19 +48,25 @@
     </div>
     <!-- http://getbootstrap.com/css/#grid -->
     <div class="row" >
-        <div class="col-sm-2 appfront pull-right">
-            <ul ng-controller="NavController as nc" class="nav nav-pills nav-justified">
-                <li ng-class="{ active: nc.isSelected(1) }"><a ng-click="nc.selectTab(1)" href="#/options"  >Options</a></li>
-                <li ng-class="{ active: nc.isSelected(2) }"><a ng-click="nc.selectTab(2)" href="#/data" >Data</a></li>
-                <li ng-class="{ active: nc.isSelected(3) }"><a ng-click="nc.selectTab(3)" href="#/events"  >Events</a></li>
+        <div ng-controller="NavController as nc" class="col-sm-2 appfront pull-right">
+            <ul class="nav nav-pills navbar-default nav-justified">
+                <li ng-class="{ active: nc.isSelected(1) }"><a ng-click="nc.selectTab(1)" href="#/options">Options</a></li>
+                <li ng-class="{ active: nc.isSelected(2) }"><a ng-click="nc.selectTab(2)" href="#/data">Data</a></li>
+                <li ng-class="{ active: nc.isSelected(3) }"><a ng-click="nc.selectTab(3)" href="#/events">Events</a></li>
             </ul>
 
             <!--This is where the options, data and events panels will appear.-->
-            <div ng-view></div>
+            <div class="panel force-square">
+                <div ng-view></div>
+            </div>
+
+            <button class="btn btn-primary btn-full-width appfront force-square" ng-click="nc.toggleShowCode()">Show HTML + Javascript</button>
         </div>
+
+
         <div ng-controller="CodeViewController as cv">
-            <div class="col-sm-10" ng-show="false">
-                <pre class="prettyprintd">{{ markup }}</pre>
+            <div class="col-sm-10 appfront" ng-show="showCode()">
+                <pre class="prettyprintd appfront force-square">{{ markup }}</pre>
             </div>
         </div>
     </div>
