--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
         .appfront {
             z-index: 1001;
         }
-        .btn-full-width {
+        button.btn-full-width {
             width:100%;
-        }
-        a {
-            border-radius: 0 !important;
         }
         .force-square {
             border-radius: 0 !important;
@@ -50,11 +47,10 @@
     <div class="row" >
         <div ng-controller="NavController as nc" class="col-sm-2 appfront pull-right">
             <ul class="nav nav-pills navbar-default nav-justified">
-                <li ng-class="{ active: nc.isSelected(1) }"><a ng-click="nc.selectTab(1)" href="#/options">Options</a></li>
-                <li ng-class="{ active: nc.isSelected(2) }"><a ng-click="nc.selectTab(2)" href="#/data">Data</a></li>
-                <li ng-class="{ active: nc.isSelected(3) }"><a ng-click="nc.selectTab(3)" href="#/events">Events</a></li>
+                <li ng-class="{ active: nc.isSelected(1) }"><a class="force-square" ng-click="nc.selectTab(1)" href="#/options">Options</a></li>
+                <li ng-class="{ active: nc.isSelected(2) }"><a class="force-square" ng-click="nc.selectTab(2)" href="#/data">Data</a></li>
+                <li ng-class="{ active: nc.isSelected(3) }"><a class="force-square" ng-click="nc.selectTab(3)" href="#/events">Events</a></li>
             </ul>
-
             <!--This is where the options, data and events panels will appear.-->
             <div class="panel force-square">
                 <div ng-view></div>
@@ -62,8 +58,6 @@
 
             <button class="btn btn-primary btn-full-width appfront force-square" ng-click="nc.toggleShowCode()">Show HTML + Javascript</button>
         </div>
-
-
         <div ng-controller="CodeViewController as cv">
             <div class="col-sm-10 appfront" ng-show="showCode()">
                 <pre class="prettyprintd appfront force-square">{{ markup }}</pre>
