--- a/maptest.html
+++ b/maptest.html
@@ -15,6 +15,7 @@
         var map;
         function initialize() {
             var options = {
+                zoomControl: false,
                 center: [51.505,-0.09],
                 zoom: 13,
                 url: 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
@@ -23,6 +24,10 @@
             map = new L.Map("map", options);
             var osm = new L.TileLayer(options.url, options);
             map.addLayer(osm);
+
+            L.marker([51.505,-0.09]).addTo(map);
+            L.circle([51.505,-0.09], 500, {"color":"red","fillColor":"#f03","fillOpacity":0.5}).addTo(map);
+            L.polygon([[51.505,-0.09],[51.503,-0.06],[51.51,-0.047]]).addTo(map);
         }
         initialize();
     }());
