--- a/maptest.html
+++ b/maptest.html
@@ -15,7 +15,6 @@
         var map;
         function initialize() {
             var options = {
-                zoomControl: false,
                 center: [51.505,-0.09],
                 zoom: 13,
                 url: 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
@@ -25,9 +24,13 @@
             var osm = new L.TileLayer(options.url, options);
             map.addLayer(osm);
 
-            L.marker([51.505,-0.09]).addTo(map);
-            L.circle([51.505,-0.09], 500, {"color":"red","fillColor":"#f03","fillOpacity":0.5}).addTo(map);
-            L.polygon([[51.505,-0.09],[51.503,-0.06],[51.51,-0.047]]).addTo(map);
+            var marker = L.marker([51.505,-0.09]).addTo(map);
+            var circle = L.circle([51.505,-0.09], 500, {"color":"red","fillColor":"#f03","fillOpacity":0.5}).addTo(map);
+            var polygon = L.polygon([[51.505,-0.09],[51.503,-0.06],[51.51,-0.047]]).addTo(map);
+
+            marker.bindPopup("<b>Hello world</b><br>I'm a popup attached to marker");
+            circle.bindPopup("<b>Hello world</b><br>I'm a popup attached to circle");
+            polygon.bindPopup("<b>Hello world</b><br>I'm a popup attached to polygon");
         }
         initialize();
     }());
