started events tab

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <script src="services/mapService.js"></script>
 <script src="services/mapOptionsService.js"></script>
 <script src="services/mapFeatureService.js"></script>
+<script src="services/mapEventsService.js"></script>
 <script src="services/codeService.js"></script>
 
 <script src="js/prettify/run_prettify.js"></script>
