--- a/maptest.html
+++ b/maptest.html
@@ -24,13 +24,15 @@
             var osm = new L.TileLayer(options.url, options);
             map.addLayer(osm);
 
-            var marker = L.marker([51.505,-0.09]).addTo(map);
-            var circle = L.circle([51.505,-0.09], 500, {"color":"red","fillColor":"#f03","fillOpacity":0.5}).addTo(map);
-            var polygon = L.polygon([[51.505,-0.09],[51.503,-0.06],[51.51,-0.047]]).addTo(map);
 
-            marker.bindPopup("<b>Hello world</b><br>I'm a popup attached to marker");
-            circle.bindPopup("<b>Hello world</b><br>I'm a popup attached to circle");
-            polygon.bindPopup("<b>Hello world</b><br>I'm a popup attached to polygon");
+            var popup = L.popup();
+            function onMapClick(e) {
+                popup
+                        .setLatLng(e.latlng)
+                        .setContent('You clicked the map at ' + e.latlng.toString())
+                        .openOn(map);
+            }
+            map.on('click', onMapClick);
         }
         initialize();
     }());
