--- a/maptest.html
+++ b/maptest.html
@@ -15,8 +15,13 @@
         var map;
         function initialize() {
             var options = {
-                center: [51.505,-0.09],
+                zoomControl: false,
+                attributionControl: false,
+                center: [47.92456746293405,0.9734916687011718],
                 zoom: 13,
+                minZoom: 13,
+                maxZoom: 16,
+                dragging: false,
                 url: 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
                 attribution: 'Map data © OpenStreetMap contributors'
             };
@@ -24,6 +29,13 @@
             var osm = new L.TileLayer(options.url, options);
             map.addLayer(osm);
 
+            var marker = L.marker([47.92456746293405,0.9734916687011718]).addTo(map);
+            var circle = L.circle([47.92456746293405,0.9734916687011718], 500, {"color":"red","fillColor":"#f03","fillOpacity":0.5}).addTo(map);
+            var polygon = L.polygon([[47.92456746293405,0.9734916687011718],[51.503,-0.06],[51.51,-0.047]]).addTo(map);
+
+            marker.bindPopup("<b>Hello world</b><br>I'm a popup attached to marker");
+            circle.bindPopup("<b>Hello world</b><br>I'm a popup attached to circle");
+            polygon.bindPopup("<b>Hello world</b><br>I'm a popup attached to polygon");
 
             var popup = L.popup();
             function onMapClick(e) {
