--- a/maptest.html
+++ b/maptest.html
@@ -15,13 +15,8 @@
         var map;
         function initialize() {
             var options = {
-                zoomControl: false,
-                attributionControl: false,
-                center: [47.92456746293405,0.9734916687011718],
+                center: [51.505,-0.09],
                 zoom: 13,
-                minZoom: 13,
-                maxZoom: 16,
-                dragging: false,
                 url: 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
                 attribution: 'Map data © OpenStreetMap contributors'
             };
@@ -29,22 +24,30 @@
             var osm = new L.TileLayer(options.url, options);
             map.addLayer(osm);
 
-            var marker = L.marker([47.92456746293405,0.9734916687011718]).addTo(map);
-            var circle = L.circle([47.92456746293405,0.9734916687011718], 500, {"color":"red","fillColor":"#f03","fillOpacity":0.5}).addTo(map);
-            var polygon = L.polygon([[47.92456746293405,0.9734916687011718],[51.503,-0.06],[51.51,-0.047]]).addTo(map);
-
-            marker.bindPopup("<b>Hello world</b><br>I'm a popup attached to marker");
-            circle.bindPopup("<b>Hello world</b><br>I'm a popup attached to circle");
-            polygon.bindPopup("<b>Hello world</b><br>I'm a popup attached to polygon");
-
-            var popup = L.popup();
-            function onMapClick(e) {
-                popup
+            var clickPopup = L.popup();
+            function clickEvent(e) {
+                clickPopup
                         .setLatLng(e.latlng)
-                        .setContent('You clicked the map at ' + e.latlng.toString())
+                        .setContent('The "click" event fired. You clicked the map at ' + e.latlng.toString())
                         .openOn(map);
             }
-            map.on('click', onMapClick);
+            map.on('click', clickEvent);
+            var zoomendPopup = L.popup();
+            function zoomendEvent(e) {
+                zoomendPopup
+                        .setLatLng(e.target.getCenter())
+                        .setContent('The "zoomend" event fired. The new zoom level is ' + e.target.getZoom())
+                        .openOn(map);
+            }
+            map.on('zoomend', zoomendEvent);
+            var moveendPopup = L.popup();
+            function moveendEvent(e) {
+                moveendPopup
+                        .setLatLng(e.target.getCenter())
+                        .setContent('The "moveend" event fired. The new map center is ' + e.target.getCenter().toString())
+                        .openOn(map);
+            }
+            map.on('moveend', moveendEvent);
         }
         initialize();
     }());
