removed prettify.css (not used), added css to remove outline of clicked button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="panel force-square">
                 <div ng-view></div>
             </div>
-            <button class="btn btn-full-width force-square"
+            <button class="btn btn-full-width force-square no-outline"
                     ng-class="{ 'btn-success': btnSuccess, 'btn-danger': !btnSuccess }"
                     ng-click="nc.toggleShowCode()">
                 <i class="fa fa-code"></i> {{ showHideText }} HTML + Javascript
