removed unused files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li ng-class="{ active: nc.isSelected(1) }"><a class="force-square" ng-click="nc.selectTab(1)" href="#/options"><i class="fa fa-cogs"></i> Options</a></li>
                 <li ng-class="{ active: nc.isSelected(2) }"><a class="force-square" ng-click="nc.selectTab(2)" href="#/features"><i class="fa fa-map-marker"></i> Features</a></li>
                 <li ng-class="{ active: nc.isSelected(3) }"><a class="force-square" ng-click="nc.selectTab(3)" href="#/events"><i class="fa fa-bolt"></i> Events</a></li>
-                <li ng-class="{ active: nc.isSelected(4) }"><a class="force-square" ng-click="nc.selectTab(4)" href="#/about"><i class="fa fa-question-circle"></i> About</a></li>
+                <li ng-class="{ active: nc.isSelected(4) }"><a class="force-square" ng-click="nc.selectTab(4)" href="#/about"><i class="fa fa-question-circle"></i></a></li>
             </ul>
             <!--This is where the options, data and events panels will appear.-->
             <div class="panel force-square">
@@ -48,7 +48,6 @@
 <script src="js/angular.js"></script>
 <script src="js/angular-route.min.js"></script>
 <script src="js/lodash.js"></script>
-<script src="js/utility.js"></script>
 <script src="js/leaflet.js"></script>
 
 <script src="app.js"></script>
