renamed js folder to vendor. Fixed when mapService disables moveend

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     </div>
 </div>
 
-<script src="js/angular.js"></script>
-<script src="js/angular-route.min.js"></script>
-<script src="js/lodash.js"></script>
-<script src="js/leaflet.js"></script>
+<script src="vendor/angular.js"></script>
+<script src="vendor/angular-route.min.js"></script>
+<script src="vendor/lodash.js"></script>
+<script src="vendor/leaflet.js"></script>
 
 <script src="app.js"></script>
 <script src="controllers/navController.js"></script>
@@ -64,8 +64,8 @@
 <script src="services/mapEventsService.js"></script>
 <script src="services/codeService.js"></script>
 
-<script src="js/prettify/run_prettify.js"></script>
-<script src="js/prettify/prettify.js"></script>
+<script src="vendor/prettify/run_prettify.js"></script>
+<script src="vendor/prettify/prettify.js"></script>
 </body>
 
 </html>
