--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Map Fiddle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- build:css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/leaflet.css"/>
@@ -47,17 +46,14 @@
         </div>
     </div>
 </div>
-
 <!-- build:cdn -->
 <script src="js/vendor/angular.min.js"></script>
 <script src="js/vendor/angular-route.min.js"></script>
 <script src="js/vendor/lodash.min.js"></script>
 <script src="js/vendor/leaflet.min.js"></script>
-
 <script src="js/vendor/prettify/run_prettify.min.js"></script>
 <script src="js/vendor/prettify/prettify.min.js"></script>
 <!-- endbuild -->
-
 <!-- build:js -->
 <script src="js/app.js"></script>
 <script src="js/controllers/navController.js"></script>
@@ -73,8 +69,7 @@
 <script src="js/services/mapEventsService.js"></script>
 <script src="js/services/codeService.js"></script>
 <!-- endbuild -->
-
-
+<!-- build:ga -->
+<!-- endbuild -->
 </body>
-
 </html>
