Added icon, put ga in head

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>Map Fiddle</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/icons/FontAwesome_f041(0)_16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- build:css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/leaflet.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
+    <!-- endbuild -->
+    <!-- build:ga -->
     <!-- endbuild -->
 </head>
 <body>
@@ -68,8 +71,6 @@
 <script src="js/services/mapFeatureService.js"></script>
 <script src="js/services/mapEventsService.js"></script>
 <script src="js/services/codeService.js"></script>
-<!-- endbuild -->
-<!-- build:ga -->
 <!-- endbuild -->
 </body>
 </html>
