starting work on automatically centering map on users location, issue #4

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
 <script src="js/controllers/viewMapController.js"></script>
 <script src="js/controllers/ViewCodeController.js"></script>
 <script src="js/directives/directives.js"></script>
+<script src="js/services/geoLocationService.js"></script>
 <script src="js/services/mapService.js"></script>
 <script src="js/services/mapOptionsService.js"></script>
 <script src="js/services/mapFeatureService.js"></script>
