replaced minified vendor libs with non-minified versions

--- a/src/index.html
+++ b/src/index.html
@@ -49,11 +49,10 @@
 </div>
 
 <!-- build:cdn -->
-<script src="js/vendor/angular.min.js"></script>
-<script src="js/vendor/angular-route.min.js"></script>
-<script src="js/vendor/lodash.min.js"></script>
-<script src="js/vendor/leaflet.min.js"></script>
-
+<script src="js/vendor/angular.js"></script>
+<script src="js/vendor/angular-route.js"></script>
+<script src="js/vendor/lodash.js"></script>
+<script src="js/vendor/leaflet-src.js"></script>
 <script src="js/vendor/prettify/run_prettify.min.js"></script>
 <script src="js/vendor/prettify/prettify.min.js"></script>
 <!-- endbuild -->
