--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
 <script src="js/vendor/leaflet-src.js"></script>
 <script src="js/vendor/prettify/run_prettify.min.js"></script>
 <script src="js/vendor/prettify/prettify.min.js"></script>
+<script src="js/vendor/googlemaps3.exp.js"></script>
 <!-- endbuild -->
 <!-- build:js -->
 <script src="js/app.js"></script>
@@ -82,6 +83,5 @@
 <script src="js/services/mapTypeService.js"></script>
 <!-- endbuild -->
 
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 </body>
 </html>
